--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,12 +78,12 @@ body, html{
 }
 
 .next{
-    background-color: var(--primary-color);
+    background-color: #8cbed9;
     justify-self: flex-end;
 }
 
 .prev{
-    background-color: #faff5a;
+    background-color: #8cbed9;
     justify-self: flex-start;
 }
 
