--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -88,7 +88,7 @@ body, html{
 }
 
 ul li{
-  color: #2a2929;
+  color: #5f5f5f;
   display: block;
   position: relative;
   float: left;
@@ -116,7 +116,7 @@ ul li label{
 }
 
 ul li:hover label{
-	color: #FFFFFF;
+	color: #000000;
 }
 
 ul li .check{
